--- a/Econometrics Group Project.ipynb
+++ b/Econometrics Group Project.ipynb
@@ -9,17 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(haven)\n",
-    "country_level_GPS_data = read_dta(\"GPS_Dataset/GPS_dataset_country_level/country_v11.dta\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +73,8 @@
     }
    ],
    "source": [
+    "library(haven)\n",
+    "country_level_GPS_data = read_dta(\"data/GPS_dataset_country_level/country_v11.dta\")\n",
     "head(country_level_GPS_data)"
    ]
   },
@@ -95,12 +87,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>country</th><th scope=col>isocode</th><th scope=col>ison</th><th scope=col>region</th><th scope=col>language</th><th scope=col>date</th><th scope=col>id_gallup</th><th scope=col>wgt</th><th scope=col>patience</th><th scope=col>risktaking</th><th scope=col>posrecip</th><th scope=col>negrecip</th><th scope=col>altruism</th><th scope=col>trust</th><th scope=col>subj_math_skills</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Turkey       </td><td>TUR          </td><td>792          </td><td>Adana        </td><td>Turkish      </td><td>2012-03-07   </td><td>7.1008e+12   </td><td>0.2717829    </td><td> 0.04717605  </td><td>1.020203     </td><td> 0.5943841338</td><td>-0.3671751   </td><td>-0.1399527   </td><td>1.6797541    </td><td>7            </td></tr>\n",
+       "\t<tr><td>Turkey       </td><td>TUR          </td><td>792          </td><td>Adana        </td><td>Turkish      </td><td>2012-03-08   </td><td>7.1008e+12   </td><td>0.2717829    </td><td>-0.67569751  </td><td>0.387177     </td><td> 0.6622341275</td><td> 0.0772513   </td><td>-0.1399527   </td><td>0.9504338    </td><td>3            </td></tr>\n",
+       "\t<tr><td>Turkey       </td><td>TUR          </td><td>792          </td><td>Adana        </td><td>Turkish      </td><td>2012-03-08   </td><td>7.1008e+12   </td><td>0.4422594    </td><td> 0.31825367  </td><td>1.020203     </td><td>-0.0009299947</td><td> 0.0772513   </td><td>-0.6069670   </td><td>0.5857736    </td><td>7            </td></tr>\n",
+       "\t<tr><td>Turkey       </td><td>TUR          </td><td>792          </td><td>Adana        </td><td>Turkish      </td><td>2012-03-07   </td><td>7.1008e+12   </td><td>1.4236710    </td><td> 0.49897206  </td><td>1.271528     </td><td> 0.9598911405</td><td> 0.0772513   </td><td> 0.5605687   </td><td>0.5857736    </td><td>7            </td></tr>\n",
+       "\t<tr><td>Turkey       </td><td>TUR          </td><td>792          </td><td>Adana        </td><td>Turkish      </td><td>2012-03-07   </td><td>7.1008e+12   </td><td>0.7053564    </td><td> 0.58933121  </td><td>1.122619     </td><td> 1.3253982067</td><td>-0.3671751   </td><td> 0.3270616   </td><td>1.6797541    </td><td>9            </td></tr>\n",
+       "\t<tr><td>Turkey       </td><td>TUR          </td><td>792          </td><td>Adana        </td><td>Turkish      </td><td>2012-03-07   </td><td>7.1008e+12   </td><td>2.1355065    </td><td>-0.58533835  </td><td>1.963511     </td><td> 1.3253982067</td><td>-0.2190329   </td><td> 0.3270616   </td><td>1.6797541    </td><td>7            </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllllllllllllll}\n",
+       " country & isocode & ison & region & language & date & id\\_gallup & wgt & patience & risktaking & posrecip & negrecip & altruism & trust & subj\\_math\\_skills\\\\\n",
+       "\\hline\n",
+       "\t Turkey        & TUR           & 792           & Adana         & Turkish       & 2012-03-07    & 7.1008e+12    & 0.2717829     &  0.04717605   & 1.020203      &  0.5943841338 & -0.3671751    & -0.1399527    & 1.6797541     & 7            \\\\\n",
+       "\t Turkey        & TUR           & 792           & Adana         & Turkish       & 2012-03-08    & 7.1008e+12    & 0.2717829     & -0.67569751   & 0.387177      &  0.6622341275 &  0.0772513    & -0.1399527    & 0.9504338     & 3            \\\\\n",
+       "\t Turkey        & TUR           & 792           & Adana         & Turkish       & 2012-03-08    & 7.1008e+12    & 0.4422594     &  0.31825367   & 1.020203      & -0.0009299947 &  0.0772513    & -0.6069670    & 0.5857736     & 7            \\\\\n",
+       "\t Turkey        & TUR           & 792           & Adana         & Turkish       & 2012-03-07    & 7.1008e+12    & 1.4236710     &  0.49897206   & 1.271528      &  0.9598911405 &  0.0772513    &  0.5605687    & 0.5857736     & 7            \\\\\n",
+       "\t Turkey        & TUR           & 792           & Adana         & Turkish       & 2012-03-07    & 7.1008e+12    & 0.7053564     &  0.58933121   & 1.122619      &  1.3253982067 & -0.3671751    &  0.3270616    & 1.6797541     & 9            \\\\\n",
+       "\t Turkey        & TUR           & 792           & Adana         & Turkish       & 2012-03-07    & 7.1008e+12    & 2.1355065     & -0.58533835   & 1.963511      &  1.3253982067 & -0.2190329    &  0.3270616    & 1.6797541     & 7            \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| country | isocode | ison | region | language | date | id_gallup | wgt | patience | risktaking | posrecip | negrecip | altruism | trust | subj_math_skills |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| Turkey        | TUR           | 792           | Adana         | Turkish       | 2012-03-07    | 7.1008e+12    | 0.2717829     |  0.04717605   | 1.020203      |  0.5943841338 | -0.3671751    | -0.1399527    | 1.6797541     | 7             |\n",
+       "| Turkey        | TUR           | 792           | Adana         | Turkish       | 2012-03-08    | 7.1008e+12    | 0.2717829     | -0.67569751   | 0.387177      |  0.6622341275 |  0.0772513    | -0.1399527    | 0.9504338     | 3             |\n",
+       "| Turkey        | TUR           | 792           | Adana         | Turkish       | 2012-03-08    | 7.1008e+12    | 0.4422594     |  0.31825367   | 1.020203      | -0.0009299947 |  0.0772513    | -0.6069670    | 0.5857736     | 7             |\n",
+       "| Turkey        | TUR           | 792           | Adana         | Turkish       | 2012-03-07    | 7.1008e+12    | 1.4236710     |  0.49897206   | 1.271528      |  0.9598911405 |  0.0772513    |  0.5605687    | 0.5857736     | 7             |\n",
+       "| Turkey        | TUR           | 792           | Adana         | Turkish       | 2012-03-07    | 7.1008e+12    | 0.7053564     |  0.58933121   | 1.122619      |  1.3253982067 | -0.3671751    |  0.3270616    | 1.6797541     | 9             |\n",
+       "| Turkey        | TUR           | 792           | Adana         | Turkish       | 2012-03-07    | 7.1008e+12    | 2.1355065     | -0.58533835   | 1.963511      |  1.3253982067 | -0.2190329    |  0.3270616    | 1.6797541     | 7             |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  country isocode ison region language date       id_gallup  wgt      \n",
+       "1 Turkey  TUR     792  Adana  Turkish  2012-03-07 7.1008e+12 0.2717829\n",
+       "2 Turkey  TUR     792  Adana  Turkish  2012-03-08 7.1008e+12 0.2717829\n",
+       "3 Turkey  TUR     792  Adana  Turkish  2012-03-08 7.1008e+12 0.4422594\n",
+       "4 Turkey  TUR     792  Adana  Turkish  2012-03-07 7.1008e+12 1.4236710\n",
+       "5 Turkey  TUR     792  Adana  Turkish  2012-03-07 7.1008e+12 0.7053564\n",
+       "6 Turkey  TUR     792  Adana  Turkish  2012-03-07 7.1008e+12 2.1355065\n",
+       "  patience    risktaking posrecip      negrecip   altruism   trust    \n",
+       "1  0.04717605 1.020203    0.5943841338 -0.3671751 -0.1399527 1.6797541\n",
+       "2 -0.67569751 0.387177    0.6622341275  0.0772513 -0.1399527 0.9504338\n",
+       "3  0.31825367 1.020203   -0.0009299947  0.0772513 -0.6069670 0.5857736\n",
+       "4  0.49897206 1.271528    0.9598911405  0.0772513  0.5605687 0.5857736\n",
+       "5  0.58933121 1.122619    1.3253982067 -0.3671751  0.3270616 1.6797541\n",
+       "6 -0.58533835 1.963511    1.3253982067 -0.2190329  0.3270616 1.6797541\n",
+       "  subj_math_skills\n",
+       "1 7               \n",
+       "2 3               \n",
+       "3 7               \n",
+       "4 7               \n",
+       "5 9               \n",
+       "6 7               "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "individual_level_GPS_data = read_dta(\"data/GPS_dataset_individual_level/individual_v11.dta\")\n",
+    "head(individual_level_GPS_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "/Users/danemesis/OneDrive/Documents/NYU/Fall 2019 - Econometrics/Project/GPS_Dataset/GPS_dataset_individual_level/individual_v11.dta"
-   ]
+   "source": []
   }
  ],
  "metadata": {
